Squashing some bugs.

--- a/src/index.css
+++ b/src/index.css
@@ -24,11 +24,10 @@ a:hover {
 }
 
 h1 {
-  font-size: 3.2em;
   line-height: 1.1;
 }
 
-button {
+.homebtn {
   padding: 10px 20px;
   border-radius: 8px;
   border: 1px solid transparent;
@@ -142,8 +141,7 @@ button:focus-visible {
 }
 
 button {
-  /* margin-top: 20px; */
-  padding: 0px 6px;
+  margin-top: 20px;
   border: none;
   border-radius: 8px;
   background: rgba(255, 255, 255, 0.2);
@@ -277,7 +275,6 @@ button:hover {
     color: white;
     cursor: pointer;
     margin: 0 auto 0.5rem auto;
-
   }
 
   /* Hide nav links by default */
